# systemdump.py

./: .gitignore  README.md  pyproject.toml  requirements.txt  whatsnew.txt
installer/: make.py
sources/: systemdump.py
sources/modules/: report.py  web.py
systemdumpy/: __about__.py  __main__.py
systemdumpy/modules/: report.py  web.py
